--- a/Software/InterfacePrincipal.html
+++ b/Software/InterfacePrincipal.html
@@ -24,23 +24,29 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-4 items-center justify-center">
           <!-- Botão para cadastrar elemento -->
           <div>
-            <button class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:bg-green-600 mb-4">
-              Cadastrar Elemento
-            </button>
+            <a href="CadastroProdutoComId.html" class="block">
+              <button class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:bg-green-600 mb-4">
+                Cadastrar Elemento
+              </button>
+            </a>
           </div>
 
           <!-- Botão para cadastrar teste -->
           <div>
-            <button class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:bg-yellow-600 mb-4">
-              Cadastrar Teste
-            </button>
+            <a href="CadastrarTestes.html" class="block">
+              <button class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:bg-yellow-600 mb-4">
+                Cadastrar Teste
+              </button>
+            </a>
           </div>
 
           <!-- Botão para consultar testes -->
           <div>
-            <button class="bg-pink-500 hover:bg-pink-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:bg-pink-600 mb-4">
-              Consultar Testes
-            </button>
+            <a href="Resultados.html" class="block">
+              <button class="bg-pink-500 hover:bg-pink-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:bg-pink-600 mb-4">
+                Consultar Testes
+              </button>
+            </a>
           </div>
         </div>
       </div>
